--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -801,7 +801,7 @@
  tech_archaeo_mass_accelerator_desc:0 "This cannon fires a barrage of ancient miniscule ionized spheres that charge upon contact with most force fields, giving them high levels of shield penetration. Any theory that these spheres could have been used for jewelry purposes were dismissed when a critical incident melted an entire laboratory."
  tech_archaeo_strike_crafts:0 "โดรนขุดเจาะโบราณ"
  tech_archaeo_strike_crafts_desc:0 "These high velocity drones have been equipped with antique mining lasers that virtually ignore any plating protecting their target. A tech too good to be wasted on astro mining."
- building_archaeostudies_faculty_relic_effect:1 "If built on a §YRelic World§!:\n Research Speed (Archaeostudies): §G+50%§!\n £minor_artifacts£ Minor Artifacts from £job_researcher£ Archaeoengineers: §G+0.3§!"
+ building_archaeostudies_faculty_relic_effect:1 "หากสร้างบน §Yดาวโบราณ§!:\n ความเร็วการวิจัย (การศึกษาโบราณคดี): §G+50%§!\n £minor_artifacts£ ศิลปวัตถุชั้นรองจาก £job_researcher£ การศึกษาโบราณคดี: §G+0.3§!"
  building_archaeostudies_faculty:0 "คณะโบราณคดี"
  building_archaeostudies_faculty_desc:0 "A series of laboratories dedicated to the studies of technological applications of minor artifacts retrieved from elder empires."
  building_league_offices:0 "$tech_secrets_league$"
@@ -847,15 +847,15 @@
  job_archaeoengineers:0 "วิศวกรโบราณคดี"
  job_archaeoengineers_plural:0 "วิศวกรโบราณคดี"
  job_archaeoengineers_desc:0 "Sometimes, it belongs in a warship, not a museum."
- job_archaeoengineers_effect_desc:1 "£job_researcher£ $job_archaeoengineers_plural$ turn $r_consumer_goods$ into £physics£ £society£ £engineering£ §YResearch Points§!"
+ job_archaeoengineers_effect_desc:1 "£job_researcher£ $job_archaeoengineers_plural$ เปลี่ยน $r_consumer_goods$ เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
  job_archaeo_drone:0 "โดรนวิศวกรโบราณคดี"
  job_archaeo_drone_plural:0 "โดรนวิศวกรโบราณคดี"
  job_archaeo_drone_desc:0 "For a Hive, cultural preservation doesn't hold as much power as an archaeolaser."
- job_archaeo_drone_effect_desc:2 "£job_researcher£ $job_archaeo_drone_plural$ turn $r_minerals$ into £physics£ £society£ £engineering£ §YResearch Points§!"
+ job_archaeo_drone_effect_desc:2 "£job_researcher£ $job_archaeo_drone_plural$ เปลี่ยน $r_minerals$ เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
  job_archaeo_unit:0 "ยูนิตวิศวกรโบราณคดี"
  job_archaeo_unit_plural:0 "ยูนิตวิศวกรโบราณคดี"
  job_archaeo_unit_desc:0 "Specialized drones for the careful manipulation and study of ancient artifacts."
- job_archaeo_unit_effect_desc:2 "£job_researcher£ $job_archaeo_unit_plural$ turn $r_energy$ into £physics£ £society£ £engineering£ §YResearch Points§!"
+ job_archaeo_unit_effect_desc:2 "£job_researcher£ $job_archaeo_unit_plural$ เปลี่ยน $r_energy$ เป็น §Yแต้มการวิจัย§! £physics£ £society£ £engineering£"
  ARCHAEO_SHIELD:0 "$tech_archaeoshield$"
  ARCHAEO_SHIELD_DESC:0 "$tech_archaeoshield_desc$"
  SMALL_ARCHAEO_SHIELD:0 "$ARCHAEO_SHIELD$ เล็ก"
@@ -922,9 +922,9 @@
  ap_archaeoengineers_tooltip:0 "ปลดล็อกเอฟเฟกต์เพิ่มเติมได้แก่ชิ้นส่วนยานและสิ่งปลูกสร้าง §Yโบราณ§!"
  count_archaeological_site_trigger:0 "Number of Dig Sites excavated"
  mod_category_archaeostudies_research_speed_mult:0 "ความเร็วในการวิจัย (การศึกษาโบราณคดี)"
- mod_job_archaeoengineers_add:0 "$job_archaeoengineers$ Jobs"
- mod_job_archaeo_drone_add:0 "$job_archaeo_drone$ Jobs"
- mod_job_archaeo_unit_add:0 "$job_archaeo_unit$ Jobs"
+ mod_job_archaeoengineers_add:0 "งาน $job_archaeoengineers$"
+ mod_job_archaeo_drone_add:0 "งาน $job_archaeo_drone$"
+ mod_job_archaeo_unit_add:0 "งาน $job_archaeo_unit$"
  zroni_storm:0 "Artificial Storm"
  leader_trait_expertise_archaeostudies:0 "เชี่ยวชาญ: การศึกษาโบราณคดี"
  leader_trait_expertise_archaeostudies_desc:0 "This leader is, following years of study, considered an expert within the field of Archaeostudies."
