--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -95,7 +95,7 @@
  mega_shipyard_1_DESC:0 "The initial framework for the $mega_shipyard_3$ lays the basis for what will one day be the most productive shipyard in the galaxy."
  mega_shipyard_2:0 "$mega_shipyard_3$ แกนกลาง"
  mega_shipyard_2_DESC:0 "The core of the $mega_shipyard_3$ contains much of the infrastructure required to move and process the vast quantities of materials needed to supply the production berths."
- mega_shipyard_3:0 "อู่ต่อยานขนาดใหญ่"
+ mega_shipyard_3:0 "อู่ต่อยานขนาดมหึมา"
  mega_shipyard_3_DESC:0 "With a multitude of ship-production berths supplied from a hyper-efficient processing core, the Mega Shipyard's output eclipses that of any other Starbase."
  mega_shipyard_ruined:0 "Ruined $mega_shipyard_3$"
  mega_shipyard_ruined_DESC:0 "This $mega_shipyard_3$ will not be building any ships without extensive repairs."
@@ -219,9 +219,9 @@
  OPINION_LEVEL_TREND:0 "With that trend we will have $RELATION$ Relations in $MONTHS$ month(s)"
  requires_terrible_opinion_or_supremacist:1 "$TRIGGER_FAIL$§RRequires $OPINION_TERRIBLE$, §YRivalry§!, an envoy sent to §YHarm Relations§!, or one empire must either be in the $diplo_stance_supremacist_name$ $DIPLOMACY_STANCE$ or be a §H$COUNTRY_FALLEN_EMPIRE$§!.§!\n"
  requires_poor_or_worse_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_POOR$ an envoy sent to §YHarm Relations§!.§!"
- requires_excellent_or_better_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_EXCELLENT$ or an envoy sent to §YImprove Relations§!.§!"
- requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_GOOD$ or an envoy sent to §YImprove Relations§!.§!"
- requires_neutral_or_better_opinion:1 "$TRIGGER_FAIL$§RRequires $OPINION_NEUTRAL$ or an envoy sent to §YImprove Relations§!.§!"
+ requires_excellent_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_EXCELLENT$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
+ requires_good_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_GOOD$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
+ requires_neutral_or_better_opinion:1 "$TRIGGER_FAIL$§Rต้องมี $OPINION_NEUTRAL$ หรือส่งทูตไป §Yปรับปรุงความสัมพันธ์§!§!"
  requires_envoy_harming_relations:1 "$TRIGGER_FAIL$§RRequires an envoy sent to §YHarm Relations§!.§!"
  requires_envoy_not_harming_relations:0 "$TRIGGER_FAIL$§RCannot be done while an envoy is sent to §YHarm Relations§! with this Empire.§!"
  requires_envoy_not_improving_relations:0 "$TRIGGER_FAIL$§RCannot be done while an envoy is sent to §YImprove Relations§! with this Empire.§!"
@@ -861,7 +861,7 @@
  federation_acceptance_ruler_psionic:1 "$ruler$ - $leader_trait_psionic$"
  federation_acceptance_ruler_very_strong:0 "$ruler$ - $trait_very_strong$"
  federation_acceptance_ruler_chosen:1 "$ruler$ - $leader_trait_chosen$"
- tech_mega_shipyard:0 "อู่ต่อยานขนาดใหญ่"
+ tech_mega_shipyard:0 "อู่ต่อยานขนาดมหึมา"
  tech_mega_shipyard_desc:0 "A zero-G construction yard of overwhelming proportion, capable of performing several space ship assembly projects simultaneously."
  tech_juggernaut:0 "จักเกอร์น็อท"
  tech_juggernaut_desc:0 "A mobile space base of unparalleled proportions, the Juggernaut ship class takes offensive warfare to a whole new level."
