--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -177,7 +177,7 @@
  PURGING_NOT_ALLOWED:0 "$TRIGGER_FAIL$Purging of non-robots is §Routlawed§!."
  EMBRACE_FACTION_COOLDOWN:1 "We recently §YEmbraced§! a Faction. This can only be done once every §Y10§! years."
  embraced_another_faction:0 "Embraced Other Faction"
- embraced_faction:0 "Faction Embraced"
+ embraced_faction:0 "กลุ่มการเมืองที่ได้รับการยอมรับ"
  embraced_faction_timer:0 "Recently Embraced Faction"
  embraced_faction_timer_desc:0 "We recently changed our Governing Ethics by embracing a Faction and will not be able to do so again for some time."
  suppressed_faction:0 "ปราบปรามกลุ่มการเมือง"
@@ -187,33 +187,33 @@
  promoted_xenophobe:0 "ส่งเสริมการกลัวต่างดาว"
  promoted_xenophobe_desc:0 "จริยธรรม §Hเกลียดต่างดาว§! กำลังได้รับการส่งเสริมจากรัฐบาล"
  suppressed_xenophile:0 "ปราบปรามการชื่นชอบชาวต่างดาว"
- suppressed_xenophile_desc:0 "The §HXenophile§! Ethic is being suppressed by the government."
+ suppressed_xenophile_desc:0 "จริยธรรม §Hชอบชาวต่างดาว§! กำลังถูกปราบปรามโดยรัฐบาล"
  promoted_xenophile:0 "ส่งเสริมการชื่นชอบชาวต่างดาว"
- promoted_xenophile_desc:0 "The §HXenophile§! Ethic is being promoted by the government."
- suppressed_spiritualist:0 "Spiritualism Suppressed"
- suppressed_spiritualist_desc:0 "The §HSpiritualist§! Ethic is being suppressed by the government."
- promoted_spiritualist:0 "Spiritualism Promoted"
- promoted_spiritualist_desc:0 "The §HSpiritualist§! Ethic is being promoted by the government."
- suppressed_materialist:0 "Materialism Suppressed"
- suppressed_materialist_desc:0 "The §HMaterialist§! Ethic is being suppressed by the government."
- promoted_materialist:0 "Materialism Promoted"
- promoted_materialist_desc:0 "The §HMaterialist§! Ethic is being promoted by the government."
- suppressed_authoritarian:0 "Authoritarianism Suppressed"
- suppressed_authoritarian_desc:0 "The §HAuthoritarian§! Ethic is being suppressed by the government."
- promoted_authoritarian:0 "Authoritarianism Promoted"
- promoted_authoritarian_desc:0 "The §HAuthoritarian§! Ethic is being promoted by the government."
- suppressed_egalitarian:0 "Egalitarianism Suppressed"
- suppressed_egalitarian_desc:0 "The §HEgalitarian§! Ethic is being suppressed by the government."
- promoted_egalitarian:0 "Egalitarianism Promoted"
- promoted_egalitarian_desc:0 "The §HEgalitarian§! Ethic is being promoted by the government."
- suppressed_militarist:0 "Militarism Suppressed"
- suppressed_militarist_desc:0 "The §HMilitarist§! Ethic is being suppressed by the government."
- promoted_militarist:0 "Militarism Promoted"
- promoted_militarist_desc:0 "The §HMilitarist§! Ethic is being promoted by the government."
- suppressed_pacifist:0 "Pacifism Suppressed"
- suppressed_pacifist_desc:0 "The §HPacifist§! Ethic is being suppressed by the government."
- promoted_pacifist:0 "Pacifism Promoted"
- promoted_pacifist_desc:0 "The §HPacifist§! Ethic is being promoted by the government."
+ promoted_xenophile_desc:0 "จริยธรรม §Hชอบต่างดาว§! กำลังได้รับการส่งเสริมจากรัฐบาล"
+ suppressed_spiritualist:0 "ปราบปรามพวกจิตวิญญาณนิยม"
+ suppressed_spiritualist_desc:0 "จริยธรรม §Hจิตวิญญาณนิยม§! กำลังถูกปราบปรามโดยรัฐบาล"
+ promoted_spiritualist:0 "ส่งเสริมจิตวิญญาณนิยม"
+ promoted_spiritualist_desc:0 "จริยธรรม §Hจิตวิญญาณนิยม§! กำลังได้รับการส่งเสริมจากรัฐบาล"
+ suppressed_materialist:0 "ปราบปรามพวกวัตถุนิยม"
+ suppressed_materialist_desc:0 "จริยธรรม §Hวัตถุนิยม§! กำลังถูกปราบปรามโดยรัฐบาล"
+ promoted_materialist:0 "ส่งเสริมวัตถุนิยม"
+ promoted_materialist_desc:0 "จริยธรรม §Hวัตถุนิยม§! กำลังได้รับการส่งเสริมจากรัฐบาล"
+ suppressed_authoritarian:0 "ปราบปรามพวกอำนาจเผด็จการ"
+ suppressed_authoritarian_desc:0 "จริยธรรม §Hอำนาจเผด็จการ§! กำลังถูกปราบปรามโดยรัฐบาล"
+ promoted_authoritarian:0 "ส่งเสริมอำนาจเผด็จการ"
+ promoted_authoritarian_desc:0 "จริยธรรม §Hอำนาจเผด็จการ§! กำลังได้รับการส่งเสริมจากรัฐบาล"
+ suppressed_egalitarian:0 "ปราบปรามพวกชอบความเสมอภาค"
+ suppressed_egalitarian_desc:0 "จริยธรรม §Hความเสมอภาค§! กำลังถูกปราบปรามโดยรัฐบาล"
+ promoted_egalitarian:0 "ส่งเสริมความเสมอภาค"
+ promoted_egalitarian_desc:0 "จริยธรรม §Hความเสมอภาค§! กำลังได้รับการส่งเสริมจากรัฐบาล"
+ suppressed_militarist:0 "ปราบปรามพวกชอบสงคราม"
+ suppressed_militarist_desc:0 "จริยธรรม §Hชอบสงคราม§! กำลังถูกปราบปรามโดยรัฐบาล"
+ promoted_militarist:0 "ส่งเสริมการทำสงคราม"
+ promoted_militarist_desc:0 "จริยธรรม §Hชอบสงคราม§! กำลังได้รับการส่งเสริมจากรัฐบาล"
+ suppressed_pacifist:0 "ปราบปรามพวกรักสันติ"
+ suppressed_pacifist_desc:0 "จริยธรรม §Hรักสันติ§! กำลังถูกปราบปรามโดยรัฐบาล"
+ promoted_pacifist:0 "ส่งเสริมการรักสันติ"
+ promoted_pacifist_desc:0 "จริยธรรม §Hรักสันติ§! กำลังได้รับการส่งเสริมจากรัฐบาล"
  EMBRACE_FACTION:0 "ยอมรับนโยบาย"
  EMBRACE_FACTION_DESC:0 "ยอมรับนโยบายและค่านิยมของ\n§Y[Root.GetName]§!\nและนำมาสู่รัฐบาลของเรา สิ่งนี้ §Gจะเปลี่ยนจริยธรรมการปกครองของเราอย่างถาวร§! และ §Rทำให้กลุ่มการเมืองอื่นๆทั้งหมดในจักรวรรดิของเราไม่พอใจ§!"
  PROMOTE_FACTION:0 "ส่งเสริม"
@@ -1060,7 +1060,7 @@
  DESTROY_BUILDING_NOT_POSSIBLE:0 "§RThis type of building can not be demolished, downgraded or replaced§!"
  DESTROY_DISTRICT:0 "รื้อถอนเขต"
  DESTROY_DISTRICT_2_DESC:0 "We can choose to demolish this district to make room for another district type. The district's construction cost will not be refunded."
- DESTROY_DISTRICT_NOT_POSSIBLE:0 "§RThis type of district can not be demolished§!"
+ DESTROY_DISTRICT_NOT_POSSIBLE:0 "§Rเขตประเภทนี้ไม่สามารถรื้อถอนได้§!"
  BUILD_DISTRICT:0 "สร้างเขต"
  BUILD_DISTRICT_2_DESC:0 "คลิกเพื่อสร้าง $NAME|Y$ บนดาวดวงนี้"
  UPGRADE_BUILDING:0 "อัปเกรดสิ่งปลูกสร้าง"
@@ -1841,7 +1841,7 @@
  POPS_WEIGHT_VALUE:0 "ประชากร: §Y$VALUE$§!"
  POPS_WEIGHT_VALUE_UNKNOWN:0 "ประชากร: §Yไม่ทราบ§!"
  ENVOYS_WEIGHT_VAL:0 "ทูต: §Y$VALUE$§!"
- COUNCIL_WEIGHT_VAL:0 "Council Position: §Y$VALUE$§!"
+ COUNCIL_WEIGHT_VAL:0 "ตำแหน่งในสภา: §Y$VALUE$§!"
  FEDERATION_WEIGHT_VAL:0 "สหพันธ์: §Y$VALUE$§!"
  RELATIVE_FLEET_POWER:0 "§Y$FLEET_POWER$§! ของพวกเขา $REL$ เมื่อเทียบกับเรา"
  RELATIVE_ECONOMY:0 "§Yอำนาจทางเศรษฐกิจ§! ของพวกเขา $REL$ เมื่อเทียบกับเรา"
@@ -5177,7 +5177,7 @@
  SORT_BY_GOVERNOR:0 "§HSort by Governor§!"
  SORT_BY_MODULES:0 "§HSort by Modules§!"
  SPACEPORT_MODULES:0 "ชิ้นส่วนโมดูล"
- LEADER_CAP:0 "จำนวนความจุของผู้นำ"
+ LEADER_CAP:0 "ความจุของผู้นำ"
  LEADER_CAP_DESC:0 "Leader Capacity determines the maximum number of Leaders our Empire can employ. This value can be affected by government types and technology."
  LEADER_CAP_CURRENT:0 "ปัจจุบัน: $CURRENT|Y$"
  LEADER_CAP_CAPACITY:0 "สูงสุด: $CURRENT|Y$"
@@ -6526,7 +6526,7 @@
  cant_be_livestock_or_matrix:0 "$TRIGGER_FAIL$Affected Pops may not be §YLivestock§! or §YGrid Amalgamated§!."
  GO_TO:0 "ไปที่นั่น"
  SPECIES_VIEW_SELECTED_POPULATION:0 "เรามีประชากรชาว $POPULATION|Y$ เผ่าพันธุ์ $SPECIES|H$ อาศัยอยู่บนดาว $PLANETS|H$ ในจักรวรรดิของเรา"
- SPECIES_VIEW_SELECTED_POPULATION_GALAXY:0 "เรารู้จักประชากรชาว $POPULATION|Y$ เผ่าพันธุ์ $SPECIES|H$ อาศัยอยู่บนดาว $PLANETS|H$ ในกาแล็กซีของเรา"
+ SPECIES_VIEW_SELECTED_POPULATION_GALAXY:0 "เรารู้จักประชากร เผ่าพันธุ์ $SPECIES|H$ จำนวน $POPULATION|Y$ อาศัยอยู่บนดาว $PLANETS|H$ ดวงในกาแล็กซีของเรา"
  SPECIES_VIEW_SELECTED_PLANET_TYPE_ICON:0 "$SPECIES|H$ มีต้นกำเนิดมาจาก $PLANETTYPE|H$ ของ $PLANETNAME|H$."
  SPECIES_VIEW_SELECTED_GO_TO_PLANET:0 "§GClick to quickly navigate the camera to where $PLANETNAME|H$ is located§!"
  SPECIES_VIEW_SELECTED_MODIFY:3 "ปรับเปลี่ยนคุณลักษณะของเผ่าพันธุ์นี้ สร้างเผ่าพันธุ์ใหม่ที่มีประสิทธิภาพ"
@@ -6706,7 +6706,7 @@
  TRADE_VALUE_FULL:0 "มูลค่าการค้า: $VALUE|Y2$"
  TRADE_VALUE_DESC:0 "§E§Y$TRADE_VALUE$§! แสดงถึงกิจกรรมทางเศรษฐกิจในแต่ละวันของพลเรือน โดยมี §Yฐานอวกาศ§! คอยเก็บรวบรวมมูลค่าการค้าและเปลี่ยนเป็นทรัพยากรอย่างเช่น £energy£ §Y$energy$§! ถ้าทุกฐานอวกาศเชื่อมต่อเข้ากับดาวเคราะห์ศูนย์กลางจักรวรรดิของคุณผ่าน §Yเส้นทางการค้า§! \n\nมูลค่าการค้าที่เก็บรวบรวมโดยตรงจากฐานอวกาศที่อยู่ศูนย์กลางของจักรวรรดิคุณ ไม่จำเป็นต้องมีเส้นทางการค้าเพื่อสร้างทรัพยากร§!"
  TRADE_VALUE:1 "มูลค่าการค้า"
- NO_TRADE_VALUE:0 "$PLANET|Y$ does not produce any $TRADE_VALUE$"
+ NO_TRADE_VALUE:0 "$PLANET|Y$ ไม่ได้ผลิต $TRADE_VALUE$ ใดๆ"
  ADD_TRADE_ITEM:0 "§RAdd trade item§!"
  CLICK_VOTER:0 "§GClick to look up Empire in Galaxy View§!"
  TOO_MANY_RIVALS:0 "You can only have $MAX|Y$ $RIVAL$s at the same time."
@@ -7470,9 +7470,9 @@
  ACTION_OPEN_PRE_FTL_HOMEWORLD_OFFER_DESC:0 " "
  DIPLO_ACTION_ADD_TRUST:1 "Their Trust of us will increase by $TRUST$ each month up a maximum of $MAX_TRUST|0G$."
  DIPLO_ACTION_INFLUENCE_COST:0 "จะทำให้เราเสียค่าอิทธิพล $INF|R$ ต่อเดือน"
- DIPLO_ACTION_ACTOR_RESOURCES:1 "The deal will grant us §Y$RESOURCES$§! each month."
- DIPLO_ACTION_RECIPIENT_RESOURCES:1 "The deal will grant them §Y$RESOURCES$§! each month."
- DIPLO_ACTION_ACTOR_AND_RECIPIENT_RESOURCES:3 "The deal will grant us §Y$ACTOR_RESOURCES$§! and them §Y$RECIPIENT_RESOURCES$§! each month."
+ DIPLO_ACTION_ACTOR_RESOURCES:1 "ข้อตกลงนี้จะมอบ §Y$RESOURCES$§! ให้กับเรา ในแต่ละเดือน"
+ DIPLO_ACTION_RECIPIENT_RESOURCES:1 "ข้อตกลงนี้จะมอบ §Y$RESOURCES$§! ให้กับพวกเขา ในแต่ละเดือน"
+ DIPLO_ACTION_ACTOR_AND_RECIPIENT_RESOURCES:3 "ข้อตกลงนี้จะมอบ §Y$ACTOR_RESOURCES$§! ให้กับเรา และมอบ §Y$RECIPIENT_RESOURCES$§! ให้กับพวกเขา ในแต่ละเดือน"
  DIPLO_ACTION_ACTOR_RESOURCES_CANCEL:1 "The deal currently grants us §Y$RESOURCES$§! each month."
  DIPLO_ACTION_RECIPIENT_RESOURCES_CANCEL:1 "The deal currently grants them §Y$RESOURCES$§! each month."
  DIPLO_ACTION_ACTOR_AND_RECIPIENT_RESOURCES_CANCEL:1 "The deal currently grants us §Y$ACTOR_RESOURCES$§! and them §Y$RECIPIENT_RESOURCES$§! each month."
@@ -7501,7 +7501,7 @@
  ACTION_BREAK_COMMERCIAL_PACT_TYPE_DESC:0 "Break our Commercial Pact with this Empire."
  ACTION_FORM_RESEARCH_AGREEMENT_TYPE:0 "ทำข้อตกลงการวิจัย"
  ACTION_FORM_RESEARCH_AGREEMENT_TYPE_DESC:1 "Form a Research Agreement with this Empire. Both empires gain a bonus when researching technologies discovered by the other empire."
- ACTION_FORM_RESEARCH_AGREEMENT_TYPE_EFFECTS_DESC:0 "We can learn £physics£$THEIRPHY$ £society£$THEIRSOC$ £engineering£$THEIRENG$ and share £physics£$OURPHY$ £society£$OURSOC$ £engineering£$OURENG$ technologies."
+ ACTION_FORM_RESEARCH_AGREEMENT_TYPE_EFFECTS_DESC:0 "เราสามารถเรียนรู้ £physics£$THEIRPHY$ £society£$THEIRSOC$ £engineering£$THEIRENG$ และแบ่งปันเทคโนโลยี £physics£$OURPHY$ £society£$OURSOC$ £engineering£$OURENG$"
  ACTION_FORM_RESEARCH_AGREEMENT_OFFER_DESC:0 "$ACTION_FORM_RESEARCH_AGREEMENT_TYPE_DESC$"
  ACTION_BREAK_RESEARCH_AGREEMENT_TYPE:0 "ทำลายข้อตกลงการวิจัย"
  ACTION_BREAK_RESEARCH_AGREEMENT_TYPE_DESC:0 "จบข้อตกลงการวิจัยของเราที่มีต่อจักรวรรดินี้"
@@ -9758,8 +9758,8 @@
  alert_available_council_agenda_title:0 "แผนการของสภาที่มี"
  alert_available_council_agenda_instant:0 "You can select a Council Agenda for your Empire"
  alert_available_council_agenda_instruction:0 "$CLICK_TO_VIEW_COUNCIL$\n"
- alert_open_council_position_title:0 "Open Council Position"
- alert_open_council_position_instant:0 "You have a Council Position without a Leader assigned"
+ alert_open_council_position_title:0 "เปิดตำแหน่งในสภา"
+ alert_open_council_position_instant:0 "คุณมีตำแหน่งผู้นำในสภาที่ยังไม่ได้แต่งตั้ง"
  alert_open_council_position_instruction:0 "$CLICK_TO_VIEW_COUNCIL$\n"
  alert_council_agenda_ready_for_activation_title:0 "แผนการของสภาพร้อมแล้ว"
  alert_council_agenda_ready_for_activation_instant:0 "Your Council Agenda is ready to be activated"
@@ -9817,7 +9817,7 @@
  LEADER_VIEW_TITLE:0 "ผู้ปกครองใหม่"
  SKILL_VALUE:0 "สกิล:£leader_skill|$LEVEL$£"
  EXPERIENCE:0 "ประสบการณ์: $LEVEL|Y$"
- LEADER_PROFESSION:0 "วิชาชีพ: $PROFESSION|H$"
+ LEADER_PROFESSION:0 "ตำแหน่ง: $PROFESSION|H$"
  LEADER_AGE_TOOLTIP:0 "อายุ: $AGE|Y$"
  LEADER_AGE_PORTRAIT:0 "อายุ\n$AGE|Y$"
  LEADER_SPECIES:0 "เผ่าพันธุ์: $SPECIES|H$"
@@ -11916,8 +11916,8 @@
  coop_presence_entry_used:1 "Cooperative player\n$HUMAN_NAME|H$"
  coop_event_option_selected:0 "$HUMAN_NAME|H$ เลือกตัวเลือกนี้"
  coop_event_option_selected_by_other:0 "§R$HUMAN_NAME|H$ ได้ทำการเลือกตัวเลือกของเหตุการณ์§!"
- MOD_VERSION:0 "Mod v0.69.6, Update 28/08/2023"
- MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
+ MOD_VERSION:0 "Mod v0.69.7, Update 02/09/2023"
+ MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Y==อัปเดตครั้งต่อไปจะมาหลังจากเกมเวอร์ชัน 3.9 ออกแล้วนะครับ==§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
  MOD_TEST2DUMMY2:0 "dummy2"
