--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -431,7 +431,7 @@
  AMENITIES_USAGE:0 "ใช้ความอยู่ดีกินดี: £amenities£ $VALUE|Y2$"
  AMENITIES_USAGE_NO_HAPPINESS:0 "ใช้ความอยู่ดีกินดี: £amenities_no_happiness£ $VALUE|Y2$"
  COST_TO_CLEAR:0 "Cost to Clear: $RESOURCES$"
- ALREADY_CLEARING_BLOCKER:0 "§RThis blocker is already being cleared.§!"
+ ALREADY_CLEARING_BLOCKER:0 "§Rสิ่งกีดขวางนี้กำลังถูกจัดการ§!"
  BLOCKER_SWAP_TYPE:0 "เปิดการปิดกั้น $TYPE|Y$"
  ON_CLEARED_EFFECT:0 "เมื่อเคลียร์เสร็จ:"
  BUILD_TIME_REMAINING:0 "£time£ $DAYS$"
@@ -2312,7 +2312,7 @@
  decision_crucible_colony_only_one:0 "£trigger_no£ The §Y[Root.Owner.GetName]§! can only have one §Y$crucible_colony$§!."
  crucible_colony:0 "โลกแห่งเบ้าหลอม"
  crucible_colony_desc:0 "$col_crucible_desc$"
- crucible_colony_effects:0 "£building£ §YCapital Buildings§! have some §Y£job_replicator£ $job_replicator$§! Jobs replaced with §Y£job_crucible_drone£ $job_crucible_drone$§! Jobs."
+ crucible_colony_effects:0 "£building£ §Yสิ่งปลูกสร้างที่เป็นเมืองหลวง§! §Y£job_replicator£ งาน $job_replicator$§! ถูกแทนที่ด้วย §Y£job_crucible_drone£ งาน $job_crucible_drone$§!"
  decision_slave_colony:0 "สร้างโลกทาส"
  decision_slave_colony_desc:0 "This entire world is purpose-built to maximize the growth rate of its enslaved population through a variety of reproductive incentives."
  decision_slave_colony_effects:0 "Disables construction of £housing£ §YCity Districts§! and most £building£ §YBuildings§! on the planet\nAllows construction of £building£ §YSlave Huts§!\n£pop£ §YFree Pops§! can no longer grow on the planet"
@@ -3174,7 +3174,7 @@
  fleet1contact2notinborder:0 "$fleet1contact_opening$ We teach xenos how to earn a substantial additional income working from home, but you seem to be doing well for yourself already.\n\n$fleet1contact_explanation_notinborder$"
  fleet1contact3notinborder:0 "$fleet1contact_opening$ We're in business for ourselves, but not by ourselves. Teamwork makes the dream work!\n\n$fleet1contact_explanation_notinborder$"
  fleet1contact_explanation_notinborder:0 "Whenever we enter your territory, we will offer you an exclusive deal. Unfortunately, our ships are all outside your territory for the moment, but we look forward to doing business in the future! In the meantime, do not hesitate to contact us, but be aware that incoming calls will be rerouted to $NAME_Caravaneer_Home$."
- cara_fleet1_contacted:0 "Greetings, caravaneers."
+ cara_fleet1_contacted:0 "สวัสดี ชาวคาราวาน"
  cara_fleet1_exit:0 "ไม่สนใจ"
  cara_fleet1_main.title:0 "$cara_fleet1_contact.title$"
  fleet1hewwo01:0 "We have a very limited quantity of Blorg glandular extract available for purchase by private entities. Great for semi-permeable membranes of all kinds!"
@@ -3303,7 +3303,7 @@
  fleet2redealdesc5:1 "[Root.GetSpeciesNamePlural]. Soon we will depart your territory. We must go wherever the current of cosmic energy credits takes us. Have you considered our offer?"
  fleet2product1_tooltip:1 "Enables the construction of  §G+1§! §YNumistic Shrine§!, bringing good fortune to a world of your choice."
  fleet2product2_tooltip:1 "§G2§! £pop£ ประชากร $NAME_Caravaneer_Fleet2_species_plural$ มาที่ [Root.Capital.GetName]"
- fleet2product3_tooltip:1 "§G+1§! §YNumistic Visualization§! Edict."
+ fleet2product3_tooltip:1 "ประกาศคำสั่ง §Yการแสดงแผนภาพและตัวเลข§! §G+1§!"
  fleet2product4_tooltip:1 "§G+1§! §YNumistic Data Modeling§! Technology"
  fleet2product5_tooltip:1 "A §GSkill 3§! governor, blessed by the goddess of fortune, joins the [Root.GetName]."
  fleet2product6_tooltip:2 "You are granted £rare_crystals£ §G200§! §Y$rare_crystals$§! in exchange for £pop£ §R1§! pop"
@@ -4195,7 +4195,7 @@
  TOOLTIP_RESTORE_JOBS:0 "คืนงาน $COUNT|Y$ ที่เคยมีการจัดลำดับความสำคัญไว้แล้ว"
  TOOLTIP_RESTORE_JOBS_NONE_TO_RESTORE:0 "£trigger_no£ ไม่มีการจัดลำดับความสำคัญของงาน"
  FAVORITE_JOB_DESC:0 "คลิกงานที่ชื่นชอบ"
- TOOLTIP_FAVORITE_JOB:0 "This sets Max priority on the selected job for that Strata. New pops of this strata will try to fill this job first."
+ TOOLTIP_FAVORITE_JOB:0 "ซึ่งจะกำหนดลำดับความสำคัญสูงสุดในงานที่เลือกสำหรับชนชั้นนั้น ประชากรใหม่ของชนชั้นนี้จะพยายามเติมเต็มงานนี้ก่อน"
  CLICK_TO_FAVORITE:1 "§Gคลิกเพื่อสลับการเปิด-ปิดถ้าอาชีพนี้เป็นที่ชื่นชอบ เพิ่มความสำคัญของอาชีพเมื่อเปิดใช้งาน§!"
  DEVASTATION:0 "การทำลายล้าง"
  AVAILABLE_JOBS:0 "£job£ ตำแหน่งงานที่ว่าง: $COUNT|Y$"
