--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -486,7 +486,7 @@
  MOD_LEADER_GOVERNOR_COST:0 "ค่าจ้างผู้ว่าการ"
  MOD_LEADER_SPECIES_EXP_GAIN:0 "ได้ค่าประสบการณ์ของผู้นำ"
  MOD_LEADER_COUNCILOR_EXP_GAIN:0 "เพิ่มประสบการณ์ที่ปรึกษา"
- MOD_COUNTRY_LEADER_CAP_ADD:0 "จำนวนความจุของผู้นำ"
+ MOD_COUNTRY_LEADER_CAP_ADD:0 "ความจุของผู้นำ"
  skill_governor_homeplanet:0 "ปกครองดาวเคราะห์บ้านเกิด"
  governing_homeplanet_effect:0 "§Eผลของการปกครองดาวบ้านเกิด:§!"
  MOD_COMPONENT_RANGE_MULT:0 "ระยะการทำงานของส่วนประกอบ"
@@ -1141,7 +1141,7 @@
  encroaching_colony:0 "Encroaching Colony"
  encroaching_scientists:0 "Encroaching Scientists"
  opinion_shade_giver:0 "Shade-Giver"
- opinion_ceded_starbase:0 "Borders Respected"
+ opinion_ceded_starbase:0 "เคารพเรื่องพรมแดน"
  opinion_not_ceded_starbase:0 "Borders Disrespected"
  opinion_respect_independence:0 "Independence Respected"
  opinion_disrespect_independence:0 "Independence Disrespected"
