--- a/mod/thmod/localisation/english/observation_events_l_english.yml
+++ b/mod/thmod/localisation/english/observation_events_l_english.yml
@@ -258,8 +258,8 @@
  locked_to_passive_observation:0 "สถานีสังเกตการณ์ถูกล็อกไว้ที่ $mission_passive_observation$"
  acquired_tech_tooltip:1 "§Y[pre_ftl_country.GetName]§!: §G+50%§! Technological Progression Rate."
  acquired_tech_tooltip_five_years:0 "§Y[pre_ftl_country.GetName]§!: §G+50%§! Technological Progression for §Y5 Years§!."
- advance_to_age_tt:0 "§Y[pre_ftl_country.GetName]§!: Advances to the §Y[pre_ftl_country.GetNewAge]§!."
- regress_to_age_tt:0 "§Y[pre_ftl_country.GetName]§!: Regresses to the §Y[pre_ftl_country.GetNewAge]§!."
+ advance_to_age_tt:0 "§Y[pre_ftl_country.GetName]§!: ก้าวหน้าไปสู่ §Y[pre_ftl_country.GetNewAge]§!"
+ regress_to_age_tt:0 "§Y[pre_ftl_country.GetName]§!: ถดถอยไปที่ §Y[pre_ftl_country.GetNewAge]§!"
  mountain:0 "a mountain"
  mountain_habitat:0 "the substructure"
  observation.2011.name:2 "Technological Development: Setback on [pre_ftl_planet.GetName]"
