--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -33,7 +33,7 @@
  LEADER_AGE_UNKNOWN:0 "§Y???§!"
  LEADER_AGE_STRING:0 "$AGE|Y$"
  RECRUIT_LEADER_HIRE_ANYWAY:0 "ยังไงก็แต่งตั้ง"
- COUNCIL_VIEW_UNLOCK_COUNCILOR_HEADER:0 "Council Positions"
+ COUNCIL_VIEW_UNLOCK_COUNCILOR_HEADER:0 "ตำแหน่งในสภา"
  COUNCIL_LEGITIMACY:0 "ความชอบธรรมของสภา"
  COUNCIL_LEGITIMACY_TOOLTIP_HEADER:0 "§H$COUNCIL_LEGITIMACY$§!\n"
  COUNCIL_LEGITIMACY_TOOLTIP_DESC:0 "§E§Hความชอบธรรม§! เป็นการสรุปว่า §Hกลุ่มการเมืองต่างๆ§! ของคุณ ยอมรับจริยธรรมของผู้ปกครองและสมาชิกสภาเพียงใด ยิ่งถ้ากลุ่มมี £political_power£§Hพลังอำนาจ§! มากเท่าใด ความพึงพอใจของพวกเขาก็ยิ่งมีความสำคัญมากขึ้นเท่านั้น\n\nความพึงพอใจของกลุ่มการเมืองจะสร้าง £unity£§H$unity$§! และ £happiness£§H$HAPPINESS$§! ดูได้ในแท็บกลุ่มการเมืองสำหรับรายละเอียด§!"
@@ -125,7 +125,7 @@
  LEADER_IS_MIA:0 "$NAME|Y$ §Ris Missing In Action.§!"
  MIA_RED:0 "§RMissing In Action§!"
  OPEN_LEADER_ASSIGNMENT:0 "§Gเปิดหน้าต่างแต่งตั้งผู้นำ§!"
- OPEN_COUNCIL_VIEW:1 "§GClick to go to Council to assign a§! §HHead of Research§!"
+ OPEN_COUNCIL_VIEW:1 "§Gคลิกไปที่สภาเพื่อแต่งตั้ง§! §Hหัวหน้าฝ่ายวิจัย§!"
  OPEN_COUNCIL_VIEW_GESTALT:0 "§Gคลิกเพื่อเปิดหน้าต่างสภา§!"
  COUNCIL_POSITION_FROM_CIVIC:0 "§Eอนุญาตให้ปลดล็อกตำแหน่งสภา:\n$t$$NAME|H$§!"
  COUNCIL_POSITION_TOOLTIP_NAME:0 "§H$NAME$§!"
@@ -138,9 +138,9 @@
  COUNCIL_RULER_POSITION_TOOLTIP:0 "§H$NAME$§!\n§EEmpire effect per Ruler Skill:§!\n$MODIFIER$"
  LOCKED_COUNCIL_POSITION_TOOLTIP:0 "§Hตำแหน่งสภาพลเมือง§!\n§gล็อก§!\n\nทำแผนการ §Y$council_agenda_agenda_unlock_slot_name$§! ให้สำเร็จเพื่อปลดล็อก"
  LOCKED_COUNCIL_POSITION_TOOLTIP_DELAYED:0 "§EThe Council can be expanded with more Councilors, one for each Empire Civic.§!"
- UNLOCKED_COUNCIL_POSITION_TOOLTIP:0 "§HCivic Council Position§!\n§YAvailable§!\n\nThis Council Position is ready to be designated."
- UNLOCKED_COUNCIL_POSITION_TOOLTIP_DELAYED:0 "$LOCKED_COUNCIL_POSITION_TOOLTIP_DELAYED$\n\n§GClick to show available Council Positions§!"
- UNLOCK_COUNCIL_POSITION_TOOLTIP:0 "§HCouncil Position from Civic $CIVIC_NAME$§!\n"
+ UNLOCKED_COUNCIL_POSITION_TOOLTIP:0 "§Hตำแหน่งสภาพลเมือง§!\n§Yว่าง§!\n\nตำแหน่งในสภานี้พร้อมที่จะแต่งตั้งแล้ว"
+ UNLOCKED_COUNCIL_POSITION_TOOLTIP_DELAYED:0 "$LOCKED_COUNCIL_POSITION_TOOLTIP_DELAYED$\n\n§Gคลิกเพื่อแสดงตำแหน่งสภาที่ว่าง§!"
+ UNLOCK_COUNCIL_POSITION_TOOLTIP:0 "§Hตำแหน่งในสภาจาก คุณสมบัติพลเมือง $CIVIC_NAME$§!\n"
  UNLOCK_COUNCIL_POSITION_TOOLTIP_DELAYED:0 "\n§Gคลิกเพื่อปลดล็อกตำแหน่งสภานี้§!"
  TRAIT_AVAILABLE_FOR:0 "มีให้สำหรับ: "
  UNLOCKS_AGENDA:0 "§Hปลดล็อกแผนการ:§!"
@@ -185,11 +185,11 @@
  COUNCIL_ACTIVE_EDICTS:0 "เปิดใช้งานประกาศคำสั่ง"
  COUNCIL_GOTO_EDICTS:0 "เปิดประกาศคำสั่ง"
  COUNCIL_NO_ACTIVE_EDICTS:0 "§gคุณไม่มีประกาศคำสั่งที่ใช้งานอยู่§!"
- UNLOCK_COUNCIL_SELECTION:0 "Allows reselection of unlocked Council Position(s)"
+ UNLOCK_COUNCIL_SELECTION:0 "อนุญาตให้มีการเลือกตำแหน่งสภาที่ปลดล็อกอีกครั้ง"
  CLICK_TO_OPEN_EDICTS_VIEW:0 "§Gคลิกเพื่อเปิดหน้าต่างประกาศคำสั่ง§!"
  CLICK_TO_VIEW_COUNCIL:0 "§Gคลิกเพื่อเปิดหน้าต่างสภา§!"
- alert_available_council_position_title:0 "Available Council Position"
- alert_available_council_position_instant:0 "You can choose another Council Position for your Empire."
+ alert_available_council_position_title:0 "ตำแหน่งในสภาที่ว่างอยู่"
+ alert_available_council_position_instant:0 "คุณสามารถเลือกตำแหน่งในสภาตำแหน่งอื่นในจักรวรรดิของคุณได้"
  alert_available_council_position_instruction:0 "$CLICK_TO_VIEW_COUNCIL$"
  EFFECTS_TXT:0 "§Eผล§!"
  EMPIRE_EFFECTS_W_ICON:0 "§Eมีผลต่อ§! £empire£ §Yจักรวรรดิ§!"
@@ -235,22 +235,22 @@
  triggered_class_trait:1 "§cคุณลักษณะผู้นำ§!\n[Root.GetClassTexticon] ประเภท [Root.GetClass]"
  triggered_trait:1 "[Root.TriggeredClass]"
  veteran_leader_trait:0 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!"
- paragon_leader_trait:1 "§dDestiny Trait§!"
+ paragon_leader_trait:1 "§dคุณลักษณะระดับสูง(โชควาสนา)§!"
  common_councilor_trait:1 "$councilor_trait$"
  veteran_councilor_trait:2 "§vคุณลักษณะผู้นำที่มีประสบการณ์§! (£council£)"
- paragon_councilor_trait:1 "§dDestiny Trait§! (£council£)"
+ paragon_councilor_trait:1 "§dคุณลักษณะระดับสูง(โชควาสนา)§! (£council£)"
  common_admiral_trait:1 "$admiral_trait$"
- veteran_admiral_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£admiral£ ประเภท พลเรือเอก"
- paragon_admiral_trait:1 "§dDestiny Trait§!\n£admiral£ Admiral Class"
+ veteran_admiral_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£admiral£ ประเภท/คลาส พลเรือเอก"
+ paragon_admiral_trait:1 "§dคุณลักษณะระดับสูง(โชควาสนา)§!\n£admiral£ ประเภท/คลาส พลเรือเอก"
  common_general_trait:1 "$general_trait$"
- veteran_general_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£general£ ประเภท พลเอก"
- paragon_general_trait:1 "§dDestiny Trait§!\n£general£ General Class"
+ veteran_general_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£general£ ประเภท/คลาส พลเอก"
+ paragon_general_trait:1 "§dคุณลักษณะระดับสูง(โชควาสนา)§!\n£general£ ประเภท/คลาส พลเอก"
  common_governor_trait:1 "$governor_trait$"
- veteran_governor_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£governor£ ประเภท ผู้ว่าการ"
- paragon_governor_trait:1 "§dDestiny Trait§!\n£governor£ Governor Class"
+ veteran_governor_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£governor£ ประเภท/คลาส ผู้ว่าการ"
+ paragon_governor_trait:1 "§dคุณลักษณะระดับสูง(โชควาสนา)§!\n£governor£ ประเภท/คลาส ผู้ว่าการ"
  common_scientist_trait:1 "$scientist_trait$"
- veteran_scientist_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£scientist£ ประเภท นักวิทยาศาสตร์"
- paragon_scientist_trait:1 "§dDestiny Trait§!\n£scientist£ Scientist Class"
+ veteran_scientist_trait:1 "§vคุณลักษณะผู้นำที่มีประสบการณ์§!\n£scientist£ ประเภท/คลาส นักวิทยาศาสตร์"
+ paragon_scientist_trait:1 "§dคุณลักษณะระดับสูง(โชควาสนา)§!\n£scientist£ ประเภท/คลาส นักวิทยาศาสตร์"
  triggered_councilor_trait:0 "[Root.SubtitleDLCCheckCouncilor]"
  triggered_admiral_trait:0 "[Root.SubtitleDLCCheckAdmiral]"
  triggered_general_trait:0 "[Root.SubtitleDLCCheckGeneral]"
@@ -272,8 +272,8 @@
  GENERAL_TEXTICON:0 "£general£"
  GOVERNOR_TEXTICON:0 "£governor£"
  NOCLASS_TEXTICON:0 "£noclass£"
- ONE_CLASS_COUNCIL_TYPE:0 "Council Position for $CLASS$"
- ANY_CLASS_COUNCIL_TYPE:0 "Council Position for Any/All Classes"
+ ONE_CLASS_COUNCIL_TYPE:0 "ตำแหน่งในสภาสำหรับ $CLASS$"
+ ANY_CLASS_COUNCIL_TYPE:0 "ตำแหน่งในสภาสำหรับ คลาสใดๆ/ทุกคลาส"
  INACTIVE_CIVIC:0 "§RDisabled due to Inactive Civic $CIVIC|Y$§!"
  LEADER_ASSIGNMENT_INSTRUCTIONS:0 "§Gคลิกเพื่อแต่งตั้งผู้นำ คลิกขวาเพื่อปลดผู้นำ§!"
  LEADER_ACTIVITY:0 "§YCurrent Activity:§! $ACTIVITY$"
@@ -634,7 +634,7 @@
  LEADER_CAP_BASE:0 "จำนวนความจุพื้นฐานของผู้นำ: $VALUE$"
  LEADER_COST_FROM_CAP_MULT:0 "จำนวนผู้นำเกินความจุ: $VALUE$"
  LEADER_CAPACITY_SHORT_DESCRIPTION:0 "เราสามารถรองรับผู้นำสูงสุด $LEADER_CAP|Y$ ปัจจุบันเรามี $LEADER_CAP_USAGE$"
- LEADER_CAPACITY_LONG_DESCRIPTION:0 "§Eการเพิ่ม §Hจำนวนความจุของผู้นำ§! ของคุณจะเพิ่มโทษที่รุนแรงยิ่งขึ้นสำหรับ §H$UPKEEP$§! และ §Hค่าประสบการณ์§! ที่ได้รับสำหรับผู้นำทั้งหมดของคุณ §Hความจุของผู้นำ§!  สามารถเพิ่มได้โดยการปลดล็อก §Hวัฒนธรรม§!, §Hเทคโนโลยี§! หรือการปฏิรูป §Hระบอบการปกครอง§!§! ของคุณ"
+ LEADER_CAPACITY_LONG_DESCRIPTION:0 "§Eการเพิ่ม §Hความจุของผู้นำ§! ของคุณจะเพิ่มโทษที่รุนแรงยิ่งขึ้นสำหรับ §H$UPKEEP$§! และ §Hค่าประสบการณ์§! ที่ได้รับสำหรับผู้นำทั้งหมดของคุณ §Hความจุของผู้นำ§!  สามารถเพิ่มได้โดยการปลดล็อก §Hวัฒนธรรม§!, §Hเทคโนโลยี§! หรือการปฏิรูป §Hระบอบการปกครอง§!§! ของคุณ"
  LEADER_CAPACITY_PENALTY_HEADER:0 "§HCurrent Penalties§!"
  LEADER_CAPACITY_PENALTY:0 "ค่าบำรุงรักษาผู้นำของคุณเพิ่มขึ้น $UPKEEP$ และผู้นำได้รับค่าประสบการณ์น้อยลง $EXPERIENCE$ เนื่องจากจำนวนเกินขีดจำกัดผู้นำของคุณ"
  not_councilor_warning:0 "$TRIGGER_FAIL$ §Rคุณสมบัติของสภาจะมีผลก็ต่อเมื่อผู้นำได้รับการแต่งตั้งให้ดำรงตำแหน่งในสภาเท่านั้น§!"
@@ -824,7 +824,7 @@
  leader_trait_farming_focus_2_desc:0 "$leader_trait_farming_focus_desc$"
  leader_trait_farming_focus_3:0 "$leader_trait_farming_focus$ III"
  leader_trait_farming_focus_3_desc:0 "$leader_trait_farming_focus_desc$"
- leader_trait_trade_focus:1 "พ่อค้า"
+ leader_trait_trade_focus:1 "นักเทรด"
  leader_trait_trade_focus_desc:1 "This leader has a keen understanding of bargaining techniques, which allows for the acquisition of profitable contracts."
  leader_trait_trade_focus_2:0 "$leader_trait_trade_focus$ II"
  leader_trait_trade_focus_2_desc:0 "$leader_trait_trade_focus_desc$"
@@ -943,7 +943,7 @@
  leader_trait_salvager_effect_2:0 "$SYSTEM_EFFECTS_TXT$:\n$t$When Debris is Scavenged/Researched in System:\n$tt$Chance to Salvage Ships: §Y20%§!\n$tt$§YOnly Works with Certain Debris.§!"
  leader_trait_salvager_effect_3:0 "$SYSTEM_EFFECTS_TXT$:\n$t$When Debris is Scavenged/Researched in System:\n$tt$Chance to Salvage Ships: §Y30%§!\n$tt$§YOnly Works with Certain Debris.§!"
  leader_trait_salvager_desc:1 "This researcher is a salvaging savant who can disassemble even the most damaged ships and repurpose them as something useful."
- leader_trait_inquisitive:1 "Inquisitor"
+ leader_trait_inquisitive:1 "อยากรู้อยากเห็น"
  leader_trait_inquisitive_desc:0 "This leader possesses a highly inquisitive mind, always trying to find another field of research to explore and study."
  leader_trait_science_communicator:0 "Archivist"
  leader_trait_science_communicator_desc:1 "Storing and cataloging data is a continuous and never-ending task. This leader makes sure that others can easily derive knowledge from the archives."
@@ -1314,7 +1314,7 @@
  leader_trait_instrument_chosen_desc:0 "$leader_trait_whisperers_chosen_desc$"
  planet_anglers:0 "Angler Jobs"
  mod_planet_anglers_produces_mult:0 "£job_angler£ Angler Output"
- mod_shipclass_military_build_speed_mult:0 "Military Ship Build Speed"
+ mod_shipclass_military_build_speed_mult:0 "ความเร็วการสร้างยานทางทหาร"
  mod_ship_science_alloys_upkeep_add:0 "Science Ship £alloys£ Alloys Upkeep"
  mod_salvage_chance_add:0 "Chance to Salvage Ships"
  MOD_COUNTRY_COMMERCIAL_PACT_MULT:0 "ประสิทธิภาพของสนธิสัญญาการค้า"
