--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  SECTOR_EDIT_VIEW:0 "แก้ไขเซ็กเตอร์"
  EDITING_SECTOR:0 "กำลังแก้ไขเซ็กเตอร์: $SECTOR_NAME|Y$"
- SECTOR_EDITOR_HELP:1 "§H$SECTOR_EDIT_VIEW$§!\nUsing the §H$SECTOR_EDIT_VIEW$§! you can freely add or remove any connected system that you own within range of the £sector_capital£§YSector Capital§!.\n$SEPARATOR$$SEPARATOR$$SEPARATOR$\n§EA sector will automatically expand to contain all systems within range that are not already part of a different sector when automatic expansion is enabled.§!"
+ SECTOR_EDITOR_HELP:1 "§H$SECTOR_EDIT_VIEW$§!\nการใช้ §Hหน้าต่าง$SECTOR_EDIT_VIEW$§! คุณสามารถเพิ่มหรือลบระบบดาวที่เชื่อมต่อกันและคุณเป็นเจ้าของระบบได้อย่างอิสระภายในขอบเขตของ £sector_capital£§Yศูนย์กลางของเซ็กเตอร์§!\n$SEPARATOR$$SEPARATOR$$SEPARATOR$\n§Eเมื่อเปิดใช้งานให้ขยายเขตแดนเซ็กเตอร์อัตโนมัติ เซ็กเตอร์จะขยายเขตแดนโดยไม่ไปกินพื้นที่ของเซ็กเตอร์อื่นที่มีอยู่ก่อนหน้า§!"
  SECTOR_EDITOR_ADD_SYSTEMS:0 "เพิ่มระบบดาว"
  SECTOR_EDITOR_REMOVE_SYSTEMS:0 "ลบระบบดาว"
  SECTOR_EDITOR_AUTO_EXPAND_TEXT:0 "ขยายเซ็กเตอร์อัตโนมัติ"
@@ -1000,8 +1000,8 @@
  council_agenda_agenda_unlock_slot_desc:1 "เราควรขยายที่นั่งในรัฐบาลของเราเพื่อรองรับสมาชิกสภาเพิ่มเติม"
  council_agenda_agenda_idle_name:0 "สถานการณ์ปกติ"
  council_agenda_agenda_idle_desc:0 "เราไม่โฟกัสปัญหาที่เฉพาะเจาะจง เราจัดการกับปัญหาที่เล็กกว่า นอกเหนือจากนั้นค่อยทำทีหลัง"
- council_agenda_agenda_reorganize_council_name:0 "Reorganize Council"
- council_agenda_agenda_reorganize_council_desc:0 "Due to changes in government focus, we should reorganize the Council to focus on other matters."
+ council_agenda_agenda_reorganize_council_name:0 "ปรับคณะรัฐมนตรีใหม่"
+ council_agenda_agenda_reorganize_council_desc:0 "เนื่องจากมีการเปลี่ยนแปลงความสนใจของรัฐบาล เราควรจัดสภาใหม่เพื่อโฟกัสเรื่องอื่นๆ"
  council_agenda_agenda_we_come_in_peace_name:0 "เรามาอย่างสันติ"
  council_agenda_agenda_we_come_in_peace_desc:0 "ตรวจสอบให้แน่ใจว่าการไม่รุกรานมีอยู่ในสังคมและความสัมพันธ์ทางการทูตของเรา"
  council_agenda_agenda_we_come_in_peace_effect_per_country:0 "$opinion_trust$: §G+$@agenda_we_come_in_peace_trust|0$§!\n"
