--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -256,7 +256,7 @@
  TRADITIONALIST_SPIRITUALIST_GOVERNMENT_DESC:1 "Having Spiritualist values be reflected in our empire governing ethics will please the [Root.GetName]."
  TRADITIONALIST_SECULAR_GOVERNMENT:0 "รัฐทางโลก (ไม่เกี่ยวกับเรื่องศาสนา)"
  TRADITIONALIST_SPIRITUALIST_POPS:0 "การเป็นน้ำหนึ่งใจเดียวกัน"
- TRADITIONALIST_SPIRITUALIST_POPS_DESC:0 "Pious minds think alike, and having at least §Y25%§! of our population be some form of Spiritualist will please the [Root.GetName]."
+ TRADITIONALIST_SPIRITUALIST_POPS_DESC:0 "ผู้มีจิตใจเคร่งศาสนาก็คิดเหมือนกันและการมีประชากรอย่างน้อย §Y25%§! มีจิตวิญญาณนิยม จะทำให้ [Root.GetName] พอใจ"
  TRADITIONALIST_FEW_SPIRITUALIST_POPS:0 "$TRADITIONALIST_SPIRITUALIST_POPS$"
  TRADITIONALIST_UNSPIRITUALIST:0 "ชนกลุ่มน้อยพร้อมรบ"
  TRADITIONALIST_NOT_UNSPIRITUALIST:0 "$TRADITIONALIST_UNSPIRITUALIST$"
@@ -284,7 +284,7 @@
  TRADITIONALIST_PURITY_TRADITION_DESC:0 "Adopting any Traditions emphasizing §YPurity§! will please the [Root.GetName]."
  TRADITIONALIST_PSIONIC_PURSUIT:2 "การแสวงหาพลังจิต"
  TRADITIONALIST_NO_PSIONIC_PURSUIT:1 "$TRADITIONALIST_PSIONIC_PURSUIT$"
- TRADITIONALIST_PSIONIC_PURSUIT_DESC:2 "Adopting the §Yจิตอยู่เหนือสรรพสิ่ง§! Ascension Perk will please the [Root.GetName]."
+ TRADITIONALIST_PSIONIC_PURSUIT_DESC:2 "การมีการยกระดับ §Yจิตอยู่เหนือสรรพสิ่ง§! จะทำให้ [Root.GetName] พอใจ"
  TRADITIONALIST_PSIONIC_TEACHINGS:0 "สอนพลังจิต"
  TRADITIONALIST_NO_PSIONIC_TEACHINGS:0 "$TRADITIONALIST_PSIONIC_TEACHINGS$"
  TRADITIONALIST_PSIONIC_TEACHINGS_DESC:0 "Researching the £society£ §Y$tech_psionic_theory$§! Technology will please the [Root.GetName]."
@@ -619,7 +619,7 @@
  POP_FACTION_PRETENDER_INSTALL_TITLE:0 "Install Pretender"
  POP_FACTION_PRETENDER_INSTALL_DESC:0 "Install §Y[parameter:pretender.GetName]§! as the new Ruler"
  factions.1.title:0 "ก่อตั้งกลุ่มการเมือง"
- factions.1.desc:1 "A new faction has recently been gaining traction in the internal political landscape of the [Root.Owner.GetName]. They call themselves the [Root.GetName], and their members have been pushing hard for us to deal with the various issues that concern them.\n\nWe are likely to see the emergence of additional factions in the future, as our population grows and their ethics drift in different directions. A disgruntled faction will be a source of trouble, but those that approve of the government's actions could prove useful..."
+ factions.1.desc:1 "เมื่อไม่นานมานี้ กลุ่มการเมืองใหม่ได้รับความสนใจในภูมิทัศน์การเมืองภายในของ [Root.Owner.GetName] พวกเขาเรียกตัวเองว่า [Root.GetName] และสมาชิกของพวกเขาได้พยายามอย่างหนักเพื่อให้เราจัดการกับปัญหาต่างๆที่เกี่ยวข้องกับพวกเขา\n\nเรามีแนวโน้มที่จะเห็นการเกิดขึ้นของกลุ่มใหม่ๆในอนาคต เมื่อประชากรของเราเพิ่มขึ้นและจริยธรรมของพวกเขามีทิศทางที่แตกต่างกัน ฝ่ายที่ไม่พอใจจะเป็นต้นตอของปัญหา แต่ผู้ที่เห็นด้วยกับการกระทำของรัฐบาลถือเป็นประโยชน์..."
  factions.1.desc.start:1 "A new faction has recently been gaining traction in the internal political landscape of the [Root.Owner.GetName]. They call themselves the §H[Root.GetName]§!. "
  factions.1.desc.firstfinisher:0 "A disgruntled faction will be a source of trouble, but one that approves of the government's actions could prove useful..."
  factions.1.desc.imperialist:0 "Their members have been pushing hard for us to assert our military dominance over the rest of the galaxy.\n\n"
