--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -146,7 +146,7 @@
  tr_harmony_unity_of_self:0 "เอกภาพของอัตตา (ตนเอง)"
  tr_harmony_unity_of_self_desc:1 "การสร้าง £pop£ §Yประชากร§! ผีดิบเนโครฟาจจะให้ £unity£ เอกภาพ"
  tr_harmony_unity_of_self_delayed:0 "Interstellar harmony would be greatly increased if all sentient beings looked, thought and acted as we do."
- tr_harmony_harmonious_directives:0 "Harmonious Directives"
+ tr_harmony_harmonious_directives:0 "คำสั่งสอดประสานกัน"
  tr_harmony_harmonious_directives_delayed:0 "The enlightened decrees of our benevolent leadership will spread peace, freedom, justice, and security throughout the entire star nation and beyond."
  tr_harmony_finish:0 "วัฒนธรรมความปรองดองสำเร็จ"
  tr_harmony_federations_finish:0 "$tr_harmony_finish$"
