--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -168,13 +168,13 @@
  HAS_NOT_NUM_ORGANIC_POP_INCREASE:0 "Amount of Organic Pops gained per Year is NOT $COMPARATOR$ $NUM|Y$"
  HAS_NUM_ARTIFICIAL_POP_ASSEMBLY:0 "Amount of Artificial Pops gained per Year is $COMPARATOR$ $NUM|Y$"
  HAS_NOT_NUM_ARTIFICIAL_POP_ASSEMBLY:0 "Amount of Artificial Pops gained per Year is NOT $COMPARATOR$ $NUM|Y$"
- NUM_LEADER_TRAITS_NEGATIVE:0 "Number of negative traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE:0 "จำนวนคุณลักษณะเชิงลบ $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAITS_POSITIVE:0 "Number of positive traits are $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAITS:0 "Number of traits are $COMPARATOR$ $NUM|Y$"
- NUM_LEADER_TRAITS_NEGATIVE_COUNCILOR:0 "Number of negative Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_COUNCILOR:0 "จำนวนคุณลักษณะเชิงลบของสมาชิกสภา $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAITS_POSITIVE_COUNCILOR:0 "Number of positive Councilor Traits are $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAITS_COUNCILOR:0 "Number of Councilor Traits are $COMPARATOR$ $NUM|Y$"
- NUM_LEADER_TRAITS_NEGATIVE_NON_COUNCIL:0 "Number of negative non Councilor Traits are $COMPARATOR$ $NUM|Y$"
+ NUM_LEADER_TRAITS_NEGATIVE_NON_COUNCIL:0 "จำนวนคุณลักษณะเชิงลบที่ไม่ใช่สมาชิกสภา $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAITS_POSITIVE_NON_COUNCIL:0 "Number of positive non Councilor Traits are $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAIT_TIERS_NEGATIVE:0 "Number of negative trait tiers are $COMPARATOR$ $NUM|Y$"
  NUM_LEADER_TRAIT_TIERS_POSITIVE:0 "Number of positive trait tiers are $COMPARATOR$ $NUM|Y$"
@@ -1098,7 +1098,7 @@
  SET_PRIMITIVE_EFFECT_YES:1 "Set pre-FTL status\n"
  SET_PRIMITIVE_EFFECT_NO:1 "Removes pre-FTL status\n"
  SET_AWARENESS:0 "Sets awareness to $AWARENESS|Y$\n"
- ADD_AWARENESS:0 "Increases awareness by $AWARENESS|Y$\n"
+ ADD_AWARENESS:0 "เพิ่มการรับรู้ $AWARENESS|Y$\n"
  GO_TO_NEXT_PRE_FTL_AGE:0 "Advances $COUNTRY|Y$ to the next Pre-FTL technology level\n"
  SET_PRE_FTL_AGE:0 "Sets the Pre-FTL technology level for $COUNTRY|Y$ to the $AGE|Y$\n"
  CREATE_POP:1 "ประชากร $SPECIES|Y$ เพิ่ม 1\n"
@@ -1285,7 +1285,7 @@
  SET_PLANET_HEALTH_EFFECT:0 "ตั้งพลังชีวิตเป็น $VALUE|Y$"
  ADD_TRAIT:1 "§H$LEADER$§! gains the §H$TRAIT$§! trait, granting the following effects:\n$EFFECTS$\n"
  REMOVE_TRAIT:1 "Removes $TRAIT$ trait from $LEADER|Y$\n"
- REMOVE_ALL_NEGATIVE_TRAITS:1 "Removes all negative traits from $LEADER|Y$\n"
+ REMOVE_ALL_NEGATIVE_TRAITS:1 "ลบคุณลักษณะเชิงลบทั้งหมดจาก $LEADER|Y$\n"
  REMOVE_ALL_POSITIVE_TRAITS:0 "Removes all positive traits from $LEADER|Y$\n"
  REMOVE_ALL_TRAITS:0 "Removes all traits from $LEADER|Y$\n"
  CHANGE_COUNTRY_TYPE_EFFECT:0 "Country Type will change to $TYPE|Y$"
