--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -325,7 +325,7 @@
  action.20.desc:0 "Artificial intelligence, in any shape or form, has been declared illegal throughout the [Root.GetName], and the authorities have started dismantling all robotic units that are in violation of this law.\n\nThe Robotic Assembly Plants responsible for producing these units are also being re-tooled to manufacture simpler, non-thinking robots."
  action.20.a:0 "Good. We must rid ourselves of these abominations."
  action.20.tooltip:0 "All Droid and Synthetic Pops are being purged.\nSynthetic and Droid Assembly Plants are converted to Robotics Assembly Plants"
- action.62.name:2 "ตอนจบของ [LastKilledCountryName]"
+ action.62.name:2 "จุดจบของ [LastKilledCountryName]"
  action.62.desc:1 "The star nation formerly known as the §H[LastKilledCountryName]§! has been destroyed by its enemies. How this will affect the political climate of the galaxy remains to be seen."
  action.63.name:1 "$action.62.name$"
  action.63.desc:1 "The ancient precursor state of §H[LastKilledCountryName]§! has met its final demise at the hands of its enemies. What the fall of this once great empire will mean for galactic politics remains to be seen."
@@ -1479,12 +1479,12 @@
  preftl.180.desc.awarness:0 "Hello again, we are now feeling ready to explore the cosmos and wish to do so on our own. We can't help taking note of your very permanent looking $preftl.180.desc.end$"
  preftl.180.desc.bshomeworld.awarness:0 "Kin, we greet you warmly. Long have you watched over us, but now we are ready to stand on our own. As we share such deep bonds of kinship, no doubt you will wish to cede control of the system to us.\n\nHard was the road, and dark, but now let us turn boldly towards the light. The stars await."
  preftl.180.desc.end:0 "$fleet_type_shipclass_starbase$ orbiting our star. We understand that this $fleet_type_shipclass_starbase$ represents some hypothetical claim on this system.\n\nWe ask only that you relinquish this hold on our space, ceding the $fleet_type_shipclass_starbase$ to the beings who have called [From.Capital.GetStarName] home since time immemorial.\n\nIt is only just."
- preftl.180.a:0 "Of course. It is only just."
- preftl.180.a.tooltip:0 "§RCede§! the §Y[From.Capital.GetStarName] $fleet_type_shipclass_starbase$§! to the §Y[From.GetName]§!\n\n§Y$opinion_ceded_starbase$§!: §Y[From.GetName]§! will hold a §Ghigher§! §HOpinion§! of §Y[Root.GetName]§!"
+ preftl.180.a:0 "แน่นอน"
+ preftl.180.a.tooltip:0 "§Rยอมยก§! §Y$fleet_type_shipclass_starbase$ [From.Capital.GetStarName]§! ให้กับ §Y[From.GetName]§!\n\n§Y$opinion_ceded_starbase$§!: §Y[From.GetName]§! จะมี §Hทัศนคติ§! ต่อ §Y[Root.GetName]§! ที่ §Gสูงกว่า§!"
  preftl.180.b.tt.nothive:0 "§RWe do not have the capablilties of housing a hivemind, all of their civilization would be extinquished if we were to do this.§!"
  preftl.180.b.tt.notregular:0 "§RWe do not have the capablilties to house individuals, all of their people would be enslaved if we were to do this.§!"
- preftl.180.b:0 "A laughable demand from an immature civilization."
- preftl.180.b.tooltip:0 "Keep control of the §Y[From.Capital.GetStarName] $fleet_type_shipclass_starbase$§!\n\n§Y$opinion_not_ceded_starbase$§!: §Y[From.GetName]§! will hold a §Rlower§! §HOpinion§! of §Y[Root.GetName]§!"
+ preftl.180.b:0 "ความต้องการที่น่าขันจากอารยธรรมที่ยังเจริญยังไม่เต็มขั้น"
+ preftl.180.b.tooltip:0 "ยังคงควบคุม §Y$fleet_type_shipclass_starbase$ [From.Capital.GetStarName]§!\n\n§Y$opinion_not_ceded_starbase$§!: §Y[From.GetName]§! จะมี §Hทัศนคติ§! ต่อ §Y[Root.GetName]§! ที่ §Rต่ำกว่า§!"
  observation.2000.name:0 "Enlightenment Completed"
  observation.2000.desc:3 "The thousands of scientists and advisors we sent to [From.home_planet.GetName] have finally completed the arduous task of bringing the local civilization up to an early FTL level of technology. Under their new unified government, the aliens now style themselves as the "[From.GetName]" and they have offered to become our vassals.\n\nWe have ceded full control of the system and dismantled our Observation Post, as per the conditions of our treaty with them. All that remains is deciding if we shall guide them further on in the stellar trek."
  observation.2000.a:0 "This is a great day."
